--- a/_static/custom.css
+++ b/_static/custom.css
@@ -1,10 +1,1 @@
-div .toctree-wrapper { column-count: 2; }
-
-div .toctree-wrapper > ul { margin: 0; }
-
-ul .toctree-l1 {
-    margin: 0;
-    -webkit-column-break-inside: avoid;
-    page-break-inside: avoid;
-    break-inside: avoid-column;
-}
+/* This file intentionally left blank. */
